--- a/apps/fish_market_web/.gitignore
+++ b/apps/fish_market_web/.gitignore
@@ -28,8 +28,10 @@ fish_market_web-*.tar
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
 
-# Ignore digested assets cache.
+# Ignore digested assets cache and fingerprinted copies.
 /priv/static/cache_manifest.json
+/priv/static/**/*-[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f]*.*
+/priv/static/**/*.gz
 
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
